force-app/main/default/objects/CampaignOrderItem__c/CampaignOrderItem__c.object-meta.xml
<CustomObject>
    <description>Objeto que irá armazenar os registros de vínculo entre as campanhas e os produtos do pedido.</description>
    
    <label>Campanha do Produto do Pedido</label>
    <nameField>
        <displayFormat>CAM-{000000}</displayFormat>
        <label>Nome</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Campanhas dos Produtos do Pedido</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>