force-app/main/default/objects/CampaignOrderItem__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campanha</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Campanhas dos Produtos do Pedido</relationshipLabel>
    <relationshipName>Campanhas_dos_Produtos_do_Pedido</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>