force-app/main/default/objects/CampaignOrderItem__c/fields/CampaignProduct__c.field-meta.xml
<CustomField>
    <fullName>CampaignProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto da Campanha</label>
    <referenceTo>CampaignProduct__c</referenceTo>
    <relationshipLabel>Campanhas dos Produtos do Pedido</relationshipLabel>
    <relationshipName>Campanhas_dos_Produtos_do_Pedido</relationshipName>
    <type>Lookup</type>
</CustomField>