force-app/main/default/objects/CampaignOrderItem__c/fields/DiscountValue__c.field-meta.xml
<CustomField>
    <fullName>DiscountValue__c</fullName>
    <label>Valor do Desconto Aplicado</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>