force-app/main/default/objects/CampaignOrderItem__c/fields/FixedUnitPriceCampaign__c.field-meta.xml
<CustomField>
    <fullName>FixedUnitPriceCampaign__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo utilizado para marcar se o produto contem uma campanha de preço fixo.</description>
    <inlineHelpText>Campo utilizado para marcar se o produto contem uma campanha de preço fixo.</inlineHelpText>
    <label>Campanha de Preço Fixo?</label>
    <type>Checkbox</type>
</CustomField>