force-app/main/default/objects/CampaignOrderItem__c/fields/OrderItem__c.field-meta.xml
<CustomField>
    <fullName>OrderItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Produto do pedido</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Campanhas dos Produtos do Pedido</relationshipLabel>
    <relationshipName>Campanhas_dos_Produtos_do_Pedido</relationshipName>
    <type>Lookup</type>
</CustomField>