force-app/main/default/objects/CampaignOrderItem__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Campaign__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Discount__c</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <columns>FixedUnitPrice__c</columns>
    <columns>OrderItem__c</columns>
    <columns>CampaignProduct__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>